close btn spacing fix

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -153,5 +153,12 @@ button {
         width: 2.25rem;
         height: 2.25rem;
         background-size: 14px 14px;
+        margin-left: 80%;
+        margin-top: -10px;
+    }
+
+    .modalTitle {
+        margin-left: 3%;
+
     }
 }
